# task_manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  readme.md  requirements.txt
scripts/: format.py  lint.py
src/task_manager/: __init__.py  main.py
src/task_manager/database_core/: __init__.py  database.py
src/task_manager/logger_core/: __init__.py  logging_config.py
src/task_manager/models/: __init__.py  task_models.py  user_models.py
src/task_manager/repositories/: __init__.py  service_repository.py  task_repository.py  user_repository.py
src/task_manager/routers/: __init__.py  task_router.py  task_service_router.py  user_router.py  user_service_router.py
src/task_manager/schemas/: __init__.py  service_schemas.py  task_schemas.py  user_schemas.py
src/task_manager/security/: __init__.py  jwt_core.py
tests/: __init__.py  conftest.py  test_database.py
tests/test_cases/: __init__.py  test_cases_for_task_demonstration_router.py  test_cases_for_task_router.py  test_cases_for_task_service_router.py  test_cases_for_user_demonstration_router.py  test_cases_for_user_router.py  test_cases_for_user_service_router.py
tests/tests_for_demonstration_routers/: __init__.py  test_task_demonstration_router.py  test_task_router.py  test_user_demonstration_router.py  test_user_router.py
tests/tests_for_service_routers/: __init__.py  test_task_service_router.py  test_user_service_router.py
